welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:5: error: not found: value a
      a = a + 1;
      ^occurrences:8: error: not found: value a
  return a
         ^